--- a/modules/administration-guide/pages/installing-che-on-openshift-using-the-web-console.adoc
+++ b/modules/administration-guide/pages/installing-che-on-openshift-using-the-web-console.adoc
@@ -7,7 +7,7 @@
 [id="installing-{prod-id-short}-on-openshift-using-the-web-console"]
 = Installing {prod-short} on OpenShift using the web console
 
-If you have trouble xref:installing-che-on-openshift-using-cli.adoc[installing {prod-short} on the command line], you can alternatively install it through the OpenShift web console.
+If you have trouble xref:installing-che-on-openshift-using-cli.adoc[installing {prod-short} on the command line], you can install it through the OpenShift web console.
 
 .Prerequisites
 
