--- a/modules/administration-guide/pages/calculating-che-resource-requirements.adoc
+++ b/modules/administration-guide/pages/calculating-che-resource-requirements.adoc
@@ -11,11 +11,13 @@
 The {prod-short} Operator, {devworkspace} Controller, and user workspaces consist of a set of pods.
 The pods contribute to the resource consumption in CPU and memory limits and requests.
 
-To learn how to calculate resources, such as memory and CPU, required to run {prod}, you can use the link:https://github.com/che-incubator/quarkus-api-example/blob/main/devfile.yaml[example devfile].
+To learn how to calculate resources such as memory and CPU that are required to run {prod}, you can use a provided example devfile.
 
 .Prequisites
 
 * You have downloaded the link:https://github.com/che-incubator/quarkus-api-example/blob/main/devfile.yaml[example devfile].
++
+IMPORTANT: The previous link is a pointer to material from the upstream community. This material represents the very latest available content and the most recent best practices. These tips have not yet been vetted by Red Hat's QE department, and they have not yet been proven by a wide user group. Please, use this information cautiously. It is best used for educational and 'developmental' purposes rather than 'production' purposes.
 
 .Procedure
 
