--- a/modules/administration-guide/pages/calculating-che-resource-requirements.adoc
+++ b/modules/administration-guide/pages/calculating-che-resource-requirements.adoc
@@ -13,7 +13,7 @@ The pods contribute to the resource consumption in CPU and memory limits and req
 
 To learn how to calculate resources such as memory and CPU that are required to run {prod}, you can use a provided example devfile.
 
-.Prequisites
+.Prerequisites
 
 * You have downloaded the link:https://github.com/che-incubator/quarkus-api-example/blob/main/devfile.yaml[example devfile].
 +
@@ -108,9 +108,9 @@ During the workspace startup, an internal `che-gateway` container is implicitly 
 |===
 ====
 
-. Sum up the resources required for each workspace, and multiply them by the expected running workspaces count.
+. Calculate the sums of the resources required for each workspace, and multiply them by the number of workspaces that you expect all of your users to run simultaneously.
 
-. Sum up the requirements for the {prod-short} Operator, Operands, and {devworkspace} Controller.
+. Calculate the sums of the requirements for the {prod-short} Operator, Operands, and {devworkspace} Controller.
 +
 [cols="1a,1a,1a,1a,1a,1a,1a",options="header"]
 .Default requirements for the {prod-short} Operator, Operands, and {devworkspace} Controller
