--- a/modules/administration-guide/pages/installing-che-on-openshift-using-the-web-console.adoc
+++ b/modules/administration-guide/pages/installing-che-on-openshift-using-the-web-console.adoc
@@ -44,7 +44,7 @@ TIP: See https://docs.openshift.com/container-platform/4.10/operators/user/olm-c
 
 pass:[<!-- vale RedHat.Spelling = NO -->]
 
-. In *{prod} instance Specification*, go to *{prod-checluster}* to land on the *Details* tab.
+. In *{prod} instance Specification*, go to *{prod-checluster}*, landing on the *Details* tab.
 
 pass:[<!-- vale RedHat.Spelling = YES -->]
 
