--- a/modules/administration-guide/pages/calculating-che-resource-requirements.adoc
+++ b/modules/administration-guide/pages/calculating-che-resource-requirements.adoc
@@ -55,7 +55,7 @@ The `postgresql` component does not define any requests and limits and therefore
 
 . Calculate the sums of the resources required for each workspace.
 +
-.Workspace requirements
+.Workspace requirements for the link:https://github.com/che-incubator/quarkus-api-example/blob/main/devfile.yaml[example devfile] in the previous step
 ====
 [cols="1a,1a,1a,1a,1a,1a,1a",options="header"]
 |===
