--- a/modules/end-user-guide/pages/troubleshooting-slow-workspaces.adoc
+++ b/modules/end-user-guide/pages/troubleshooting-slow-workspaces.adoc
@@ -69,7 +69,7 @@ Providing enough memory::
 +
 Plug-ins consume CPU and memory resources. For example, when a plugin provides IntelliSense features, collecting data can consume all the memory allocated to the container.
 +
-Providing more memory to the container can increase performance. Ensure about the correctness of memory settings in the devfile definition - `devfile.yaml` file
+Providing more memory to the container can increase performance. Ensure that memory settings in the devfile definition `devfile.yaml` file are correct.
 +
 ----
 [source,yaml]
