--- a/modules/end-user-guide/pages/starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc
+++ b/modules/end-user-guide/pages/starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc
@@ -68,6 +68,15 @@ With GitHub and GitLab, you can even use the URL of a specific branch of the rep
 * `pass:c,a,q[{prod-url}#https://github.com/__<user_or_org>__/__<repository>__/pull/__<pull_request_id>__]` starts a new workspace with a clone of the branch of the pull request.
 ====
 +
+.The URL syntax for starting a new workspace with a clone of a BitBucket Server repository
+====
+
+* `pass:c,a,q[{prod-url}#https://<bb-host>/scm/<project-key>/<repository_name>.git]` starts a new workspace with a clone of the default branch.
+* `pass:c,a,q[{prod-url}#https://<bb-host>/users/<user-slug>/repos/<repo-name>/]` starts a new workspace with a clone of the default branch, if a repository was created under the user profile.
+* `pass:c,a,q[{prod-url}#https://<bb-host>/users/<user-slug>/repos/<repo-name>/browse?at=refs%2Fheads%2F<branch-name>]` starts a new workspace with a clone of the specified branch.
+
+====
++
 After you enter the URL to start a new workspace in a browser tab, it renders the workspace-starting page.
 +
 When the new workspace is ready, the workspace IDE loads in the browser tab.
