--- a/modules/administration-guide/pages/calculating-che-resource-requirements.adoc
+++ b/modules/administration-guide/pages/calculating-che-resource-requirements.adoc
@@ -15,7 +15,7 @@ The pods contribute to the resource consumption in CPU and memory limits and req
 
 . Identify the workspace resource requirements which depend on the devfile that is used for defining the development environment. This includes identifying the workspace components explicitly specified in the `components` section of the devfile.
 
-** To learn how to calculate resources such as memory and CPU that are required to run one workspace, you can examine the linked link:https://github.com/che-incubator/quarkus-api-example/blob/main/devfile.yaml[example devfile] and identify the following components in it:
+** Here is an link:https://github.com/che-incubator/quarkus-api-example/blob/main/devfile.yaml[example devfile] with the following components:
 +
 .`tools`
 ====
