--- a/modules/administration-guide/pages/calculating-che-resource-requirements.adoc
+++ b/modules/administration-guide/pages/calculating-che-resource-requirements.adoc
@@ -53,7 +53,7 @@ The `postgresql` component does not define any requests and limits and therefore
     cpuLimit: 500m
 ----
 
-. Calculate the sums of the resources required for each workspace.
+. Calculate the sums of the resources required for each workspace. If you intend to use multiple devfiles, repeat this calculation for every expected devfile.
 +
 .Workspace requirements for the link:https://github.com/che-incubator/quarkus-api-example/blob/main/devfile.yaml[example devfile] in the previous step
 ====
