--- a/modules/administration-guide/partials/proc_applying-the-github-oauth-app-secret.adoc
+++ b/modules/administration-guide/partials/proc_applying-the-github-oauth-app-secret.adoc
@@ -44,7 +44,7 @@ data:
 ----
 <1> The {prod-short} namespace. The default is `{prod-namespace}`.
 <2> This depends on the GitHub product your organization is using: When using GitHub Enterprise Server, enter the GitHub Enterprise Server URL. When using GitHub Enterprise Cloud, omit this line or enter the default `https://github.com`.
-<3> This is only added for GitHub Enterprise Server. To disable subdomain isolation, set this to `"true"`. To enable subdomain isolation, set this to `"false"`.
+<3> This line is only added for GitHub Enterprise Server. To disable subdomain isolation, set this to `"true"`. To enable subdomain isolation, set this to `"false"`.
 <4> The Base64-encoded *GitHub OAuth Client ID*.
 <5> The Base64-encoded *GitHub OAuth Client Secret*.
 
