--- a/modules/administration-guide/partials/ref_grafana-dashboards-for-the-dev-workspace-operator.adoc
+++ b/modules/administration-guide/partials/ref_grafana-dashboards-for-the-dev-workspace-operator.adoc
@@ -1,7 +1,9 @@
 [id="ref_grafana-dashboards-for-the-dev-workspace-operator"]
-= Grafana dashboard for the {devworkspace} Operator
+= Dashboard for the {devworkspace} Operator
 
-The example Grafana dashboard link:https://github.com/devfile/devworkspace-operator/blob/main/docs/grafana/grafana-dashboard.json[based on `grafana-dashboard.json`] displays the following metrics from the {devworkspace} Operator.
+The OpenShift web console custom dashboard is based on Grafana 6.x and displays the following metrics from the {devworkspace} Operator.
+
+Not all features for Grafana 6.x dashboards are supported as an OpenShift web console dashboard.
 
 == The *{devworkspace}-specific metrics* panel
 
@@ -10,7 +12,6 @@ image::monitoring/monitoring-dev-workspace-metrics-panel.png[Grafana dashboard p
 
 Average workspace start time:: The average workspace startup duration.
 Workspace starts:: The number of successful and failed workspace startups.
-Workspace startup duration:: A heatmap that displays workspace startup duration.
 {devworkspace} successes / failures:: A comparison between successful and failed {devworkspace} startups.
 {devworkspace} failure rate:: The ratio between the number of failed workspace startups and the number of total workspace startups.
 {devworkspace} startup failure reasons:: A pie chart that displays the distribution of workspace startup failures:
@@ -18,22 +19,12 @@ Workspace startup duration:: A heatmap that displays workspace startup duration.
 * `InfrastructureFailure`
 * `Unknown`
 
-== The *Operator metrics* panel (part 1)
+== The *Operator metrics* panel
 
-.The *Operator metrics* panel (part 1)
-image::monitoring/monitoring-dev-workspace-operator-metrics-panel-1.png[Grafana dashboard panels that contain Operator metrics part 1]
+.The *Operator metrics* panel
+image::monitoring/monitoring-dev-workspace-operator-metrics-panel.png[Grafana dashboard panels that contain Operator metrics]
 
 Webhooks in flight:: A comparison between the number of different webhook requests.
-Work queue duration:: A heatmap that displays how long the reconcile requests stay in the work queue before they are handled.
-Webhooks latency (/mutate):: A heatmap that displays the `/mutate` webhook latency.
-Reconcile time:: A heatmap that displays the reconcile duration.
-
-== The *Operator metrics* panel (part 2)
-
-.The *Operator metrics* panel (part 2)
-image::monitoring/monitoring-dev-workspace-operator-metrics-panel-2.png[Grafana dashboard panels that contain Operator metrics part 2]
-
-Webhooks latency (/convert):: A heatmap that displays the `/convert` webhook latency.
 Work queue depth:: The number of reconcile requests that are in the work queue.
 Memory:: Memory usage for the {devworkspace} controller and the {devworkspace} webhook server.
-Reconcile counts (DWO):: The average per-second number of reconcile counts for the {devworkspace} controller.
+Average reconcile counts per second (DWO):: The average per-second number of reconcile counts for the {devworkspace} controller.
