--- a/modules/administration-guide/partials/proc_applying-the-github-oauth-app-secret.adoc
+++ b/modules/administration-guide/partials/proc_applying-the-github-oauth-app-secret.adoc
@@ -43,7 +43,9 @@ data:
   secret: __<Base64_GitHub_OAuth_Client_Secret>__ <5>
 ----
 <1> The {prod-short} namespace. The default is `{prod-namespace}`.
+pass:[<!-- vale CheDocs.CommonTerms = NO -->]
 <2> This depends on the GitHub product your organization is using: When hosting repositories on github.com or GitHub Enterprise Cloud, omit this line or enter the default `https://github.com`. When hosting repositories on GitHub Enterprise Server, enter the GitHub Enterprise Server URL.
+pass:[<!-- vale CheDocs.CommonTerms = YES -->]
 <3> This line is only added for GitHub Enterprise Server. To disable subdomain isolation, set this to `"true"`. To enable subdomain isolation, set this to `"false"`.
 <4> The Base64-encoded *GitHub OAuth Client ID*.
 <5> The Base64-encoded *GitHub OAuth Client Secret*.
