--- a/modules/end-user-guide/pages/url-parameter-for-the-ide.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-the-ide.adoc
@@ -48,3 +48,5 @@ pass:c,a,q[{prod-url}]#__<git_repository_url>__?che-editor=__<url_to_a_file>__# 
 * To use this parameter with a xref:defining-a-common-ide.adoc[`che-editor.yaml`] file, copy the file with another name or path, and remove the line with `inline` from the file.
 
 ====
+
+include::example$snip_{project-context}-IDE-default-yaml-file.adoc[]
