feat: Allow for the customization of user roles in Che
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/modules/administration-guide/nav.adoc
+++ b/modules/administration-guide/nav.adoc
@@ -70,6 +70,7 @@
 **** xref:configuring-oauth-1-for-a-bitbucket-server.adoc[]
 **** xref:configuring-oauth-2-for-microsoft-azure-devops-services.adoc[]
 *** xref:removing-user-data-in-compliance-with-the-gdpr.adoc[]
+*** xref:configuring-user-cluster-roles.adoc[]
 * xref:managing-ide-extensions.adoc[]
 ** xref:extensions-for-microsoft-visual-studio-code-open-source.adoc[]
 * xref:managing-workloads-using-the-che-server-api.adoc[]
