--- a/modules/end-user-guide/examples/snip_che-ide-default-yaml-file.adoc
+++ b/modules/end-user-guide/examples/snip_che-ide-default-yaml-file.adoc
@@ -1,7 +1,4 @@
 :_content-type: SNIPPET
 
-[NOTE]
-====
-The default `devfile.yaml` file featuring settings for the supported IDEs is available link:https://github.com/eclipse-che/che-plugin-registry/blob/main/che-editors.yaml[here].
-====
+* The default `devfile.yaml` file featuring settings for the supported IDEs is available link:https://github.com/eclipse-che/che-plugin-registry/blob/main/che-editors.yaml[here].
 
