--- a/modules/administration-guide/partials/ref_grafana-dashboards-for-the-dev-workspace-operator.adoc
+++ b/modules/administration-guide/partials/ref_grafana-dashboards-for-the-dev-workspace-operator.adoc
@@ -19,7 +19,9 @@ Workspace starts:: The number of successful and failed workspace startups.
 * `InfrastructureFailure`
 * `Unknown`
 
-== The *Operator metrics* panel
+== Operator metrics
+
+The Operator-specific metrics are displayed in the *Operator Metrics* panel.
 
 .The *Operator metrics* panel
 image::monitoring/monitoring-dev-workspace-operator-metrics-panel.png[Grafana dashboard panels that contain Operator metrics]
