--- a/modules/administration-guide/partials/ref_grafana-dashboards-for-the-dev-workspace-operator.adoc
+++ b/modules/administration-guide/partials/ref_grafana-dashboards-for-the-dev-workspace-operator.adoc
@@ -23,7 +23,7 @@ Workspace starts:: The number of successful and failed workspace startups.
 
 The Operator-specific metrics are displayed in the *Operator Metrics* panel.
 
-.The *Operator metrics* panel
+.The Operator Metrics panel
 image::monitoring/monitoring-dev-workspace-operator-metrics-panel.png[Grafana dashboard panels that contain Operator metrics]
 
 Webhooks in flight:: A comparison between the number of different webhook requests.
