--- a/modules/administration-guide/partials/ref_grafana-dashboards-for-the-dev-workspace-operator.adoc
+++ b/modules/administration-guide/partials/ref_grafana-dashboards-for-the-dev-workspace-operator.adoc
@@ -5,7 +5,11 @@ The OpenShift web console custom dashboard is based on Grafana 6.x and displays 
 
 Not all features for Grafana 6.x dashboards are supported as an OpenShift web console dashboard.
 
-== The *{devworkspace}-specific metrics* panel
+== {devworkspace} metrics
+
+The {devworkspace}-specific metrics are displayed in the *{devworkspace} Metrics* panel.
+
+.The {devworkspace} Metrics panel
 
 .The *{devworkspace}-specific metrics* panel
 image::monitoring/monitoring-dev-workspace-metrics-panel.png[Grafana dashboard panels that contain metrics related to `DevWorkspace startup]
