--- a/modules/administration-guide/partials/ref_grafana-dashboards-for-the-dev-workspace-operator.adoc
+++ b/modules/administration-guide/partials/ref_grafana-dashboards-for-the-dev-workspace-operator.adoc
@@ -3,7 +3,7 @@
 
 The OpenShift web console custom dashboard is based on Grafana 6.x and displays the following metrics from the {devworkspace} Operator.
 
-Not all features for Grafana 6.x dashboards are supported as an OpenShift web console dashboard.
+NOTE: Not all features for Grafana 6.x dashboards are supported as an OpenShift web console dashboard.
 
 == {devworkspace} metrics
 
