--- a/modules/administration-guide/partials/ref_grafana-dashboards-for-the-dev-workspace-operator.adoc
+++ b/modules/administration-guide/partials/ref_grafana-dashboards-for-the-dev-workspace-operator.adoc
@@ -16,7 +16,7 @@ image::monitoring/monitoring-dev-workspace-metrics-panel.png[Grafana dashboard p
 
 Average workspace start time:: The average workspace startup duration.
 Workspace starts:: The number of successful and failed workspace startups.
-{devworkspace} successes / failures:: A comparison between successful and failed {devworkspace} startups.
+{devworkspace} successes and failures:: A comparison between successful and failed {devworkspace} startups.
 {devworkspace} failure rate:: The ratio between the number of failed workspace startups and the number of total workspace startups.
 {devworkspace} startup failure reasons:: A pie chart that displays the distribution of workspace startup failures:
 * `BadRequest`
