--- a/modules/administration-guide/partials/proc_viewing-dev-workspace-operator-metrics-on-grafana-dashboards.adoc
+++ b/modules/administration-guide/partials/proc_viewing-dev-workspace-operator-metrics-on-grafana-dashboards.adoc
@@ -1,7 +1,7 @@
 [id="proc_viewing-dev-workspace-operator-metrics-on-grafana-dashboards"]
 = Viewing {devworkspace} Operator metrics from an OpenShift web console dashboard
 
-After configuring the in-cluster Prometheus instance to collect {devworkspace} Operator metrics, the metrics can be viewed from a custom dashboard within the *Administrator* perspective of the OpenShift web console.
+After configuring the in-cluster Prometheus instance to collect {devworkspace} Operator metrics, you can view the metrics on a custom dashboard in the *Administrator* perspective of the OpenShift web console.
 
 .Prerequisites
 
