--- a/modules/administration-guide/partials/proc_collecting-che-metrics-with-prometheus.adoc
+++ b/modules/administration-guide/partials/proc_collecting-che-metrics-with-prometheus.adoc
@@ -15,7 +15,7 @@ To use Prometheus to collect, store, and query JVM metrics for {prod-short} Serv
 
 .Procedure
 
-. Create the ServiceMonitor for detecting the {prod-short} JVM metrics service
+. Create the ServiceMonitor for detecting the {prod-short} JVM metrics service.
 +
 .ServiceMonitor
 ====
