--- a/modules/administration-guide/partials/proc_collecting-che-metrics-with-prometheus.adoc
+++ b/modules/administration-guide/partials/proc_collecting-che-metrics-with-prometheus.adoc
@@ -102,7 +102,7 @@ oc label namespace {prod-namespace} openshift.io/cluster-monitoring=true
 
 .Verification
 
-. In the *Administrator* view of the OpenShift web console, navigate to *Observe* -> *Metrics* from the sidebar menu on the left.
+. In the *Administrator* view of the OpenShift web console, go to *Observe* -> *Metrics*.
 
 . Run a PromQL query to confirm that the metrics are available. For example, enter `process_uptime_seconds{job="che-host"}` and click *Run queries*.
 +
