--- a/modules/administration-guide/partials/proc_collecting-dev-workspace-operator-metrics-with-prometheus.adoc
+++ b/modules/administration-guide/partials/proc_collecting-dev-workspace-operator-metrics-with-prometheus.adoc
@@ -57,7 +57,7 @@ oc label namespace {prod-namespace} openshift.io/cluster-monitoring=true
 
 . For a fresh installation of {prod-short}, generate metrics by creating a {prod-short} workspace from the Dashboard.
 
-. In the *Administrator* view of the OpenShift web console, navigate to *Observe* -> *Metrics* from the sidebar menu on the left.
+. In the *Administrator* view of the OpenShift web console, go to *Observe* -> *Metrics*.
 
 . Run a PromQL query to confirm that the metrics are available. For example, enter `devworkspace_started_total` and click *Run queries*.
 +
