--- a/modules/administration-guide/partials/proc_viewing-che-metrics-on-grafana-dashboards.adoc
+++ b/modules/administration-guide/partials/proc_viewing-che-metrics-on-grafana-dashboards.adoc
@@ -15,7 +15,7 @@ After configuring the in-cluster Prometheus instance to collect {prod-short} Ser
 
 .Procedure
 
-. Create a ConfigMap in the `openshift-config-managed` {orch-namespace} containing the dashboard definition and apply the necessary label. The dashboard definition is based on Grafana 6.x dashboards, however, not all Grafana 6.x dashboard features are supported within the OpenShift web console.
+. Create a ConfigMap for the dashboard definition in the `openshift-config-managed` {orch-namespace} and apply the necessary label.
 +
 [source,terminal,subs="+attributes,quotes"]
 ----
